// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when in edit mode 1`] = `
<span>
  <input
    className="value"
    onChange={[Function]}
    type="text"
    value="Hello"
  />
  <input
    className="save-button"
    onClick={[Function]}
    type="button"
    value="Save"
  />
  <input
    className="cancel-button"
    onClick={[Function]}
    type="button"
    value="Cancel"
  />
</span>
`;

exports[`renders when in show mode 1`] = `
<span>
  Hello
  <input
    className="edit-button"
    onClick={[Function]}
    type="button"
    value="Edit"
  />
</span>
`;
